# stylus-sipb

./: .gitignore  Cargo.toml
abis/: erc1155.json  erc20.json  erc721.json  ierc165.json
crates/sipb-preflight/: Cargo.toml
crates/stylus-bindgen/: Cargo.toml
crates/stylus-bindgen/src/: main.rs
crates/stylus-bindgen/tests/: golden_tests.rs
crates/stylus-bindgen/tests/expected/: erc1155.rs  ierc165.rs
crates/stylus-interfaces/: Cargo.toml
crates/stylus-interfaces/src/: erc20.rs  erc721.rs  lib.rs
