[workspace]
members = [
    "crates/stylus-interfaces",
    "crates/stylus-bindgen",
    "crates/sipb-preflight"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [""]
license = "MIT"

[workspace.dependencies]
alloy-json-abi = "=0.7.6"
alloy-primitives = { version = "=0.7.6", features = ["serde"] }
alloy-sol-types = "=0.7.6"
alloy-sol-type-parser = "=0.7.6"

stylus-sdk = "0.6.0"

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"

ruint = "=1.12.3"